# rimpowder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
cmakeScripts/: printList.cmake  setupNVCC.cmake
dummy_state_creator/: CMakeLists.txt  main.cpp  png_creator.cpp  png_creator.hpp
include/: common.cuh  simple_clock.hpp  simulation.cuh
include/disp/: color.hpp  delegate.hpp  event.hpp  window.hpp
include/disp/internal/: SDL_window.hpp
include/drawables/: buffer_drawable.hpp  drawable.hpp
include/primitives/: vec2.hpp
project_window_ctx/: CMakeLists.txt
project_window_ctx/include/disp/: color.hpp  delegate.hpp  event.hpp  window.hpp
project_window_ctx/include/disp/internal/: SDL_window.hpp
project_window_ctx/include/drawables/: buffer_drawable.hpp  drawable.hpp
project_window_ctx/src/disp/: window.cpp
project_window_ctx/src/disp/internal/: SDL_window.cpp
project_window_ctx/src/drawable/: buffer_drawable.cpp
sim_cpu/: main.cpp  txt_sim.cpp  txt_sim.h
sim_gpu/: CMakeLists.txt  Makefile  cuda_sim.cu  cuda_sim.cuh  cuda_sim.hpp  gpu_sim.cu  gpu_sim.cuh  main.cpp  main.cu
src/: main.cu  simulation.cu
src/disp/: window.cpp
src/disp/internal/: SDL_window.cpp
txt_sim/: Makefile  main.cpp  txt_sim.cpp  txt_sim.h
vs2022/: vs2022.sln  vs2022.vcxproj
vs2022/sim_gpu/: sim_gpu.vcxproj
